# vizh

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
libv/: crtv.c  io.c  libv.h  strings.c
libv/io/: io.c
libv/memory/: memory.c
samples/: main_memcopy.c
samples/memcopy/: main_memcopy.c
tests/: backend_test.py  hello_putstr.py  memcopy.py  read_print.py
vizh/: compiler.py  driver.py  interpreter.py  ir.py  libv.py  linker.py  ocr.py  parser.py  util.py
