[metadata]
name = vizh
version = 0.0.1
author = Sy Brand
author_email = tartanllama@gmail.com
description = A visual esoteric language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tartanllama/vizh
project_urls =
    Bug Tracker = https://github.com/tartanllama/vizh/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = vizh
python_requires = >=3.6

[options.entry_points]
console_scripts=
    vizh=vizh.driver:main